--- a/app/src/main/res/layout/activity_noteview.xml
+++ b/app/src/main/res/layout/activity_noteview.xml
@@ -8,7 +8,9 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:elevation="10dp"
+        android:layout_margin="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
